--- a/_posts/2018-06-15-usuarios.md
+++ b/_posts/2018-06-15-usuarios.md
@@ -1,12 +1,13 @@
 ---
 layout: post
-title:  "Ticket"
+title:  "Usuário"
 projeto: "fastQuestAdmin"
-permalink: /fastQuestAdmin/ticked
-nomePasta: "Ticket"
+permalink: /fastQuestAdmin/usuario
+nomePasta: "Usuarios"
 ---
-# Ticked
-Ticket são erros ocasionados no sistema que podem ser consultados e analisados pelos usuários com a permissão concedida.
+# Usuário
+
+Usuário são as pessoas que podem acessar o sistema, desde administradores até entrevistadores.
 <div class="row">    
     {% for post in site.posts %}
         {%if post.projeto == "fastQuestAdmin" %}
@@ -19,4 +20,4 @@ Ticket são erros ocasionados no sistema que podem ser consultados e analisados 
             {% endif %}
         {% endif %}
     {% endfor %}    
-</div>  
+</div>           
